# awetop

./: .gitignore  README.md  pyproject.toml
docs/: 2026-06-23-awetop-design.md
src/awetop/: __init__.py  __main__.py  cli.py  discovery.py  pricing.py  process.py  profile.py  render.py  snapshot.py  transcript.py
